# INFO-H502_GroupC_Project

./: .gitignore  CMakeLists.txt  Readme.md
src/: CMakeLists.txt  ball.h  billiard.h  camera.h  cue.h  debug.h  entity.h  input.h  main.cpp  mesh.h  mirror.h  object.h  room.h  shader.h  skybox.h  texture.h  window.h
src/shaders/: 3.2.2.point_shadows.frag  3.2.2.point_shadows.vert  3.2.2.point_shadows_depth.vert  5.4.light_casters.frag  advanced_lighting.frag  advanced_lighting.vert  cubeMap.frag  cubeMap.vert  genericLighting.frag  genericLighting.vert  image.frag  image.vert  lamp.frag  mirror.frag  multiple_lights.frag  multiple_lights.vert  point_shadows.frag  point_shadows.vert  point_shadows_depth.frag  point_shadows_depth.gs  point_shadows_depth.vert  refraction.frag  refraction.vert  simple.frag  simple.vert  window.frag
